--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f7f7f7;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* justify-content: center; */
+  min-height: 100vh;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  margin: 30px auto;
+  width: 650px;
+}
+th {
+  height: 30px;
+  background-color: antiquewhite;
+}
+tr {
+  height: 30px;
+  vertical-align: middle;
+}
+/** for table row alternate color**/
+tr:nth-child(even) {background-color: #b7dfff;}
+
+table{
+  border-spacing: 0px; /* remove border spacing */
+  border: none; border-collapse: collapse;
+}
+table td { border-left: 1px solid #000; }
+table td:first-child { border-left: none; }
+
+.rightBorder{
+  border-right: solid;
+}
+.noListStyle{
+  list-style: none;
+  padding-inline-start: 0px;
+}
+.red{
+  color: red;
+}
+.green{
+  color: green;
+}
+.center{
+  text-align: center;
+}
+.selectionArea{
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.flex{
+  display: flex;
+}
+.flexChild{
+  flex:0.3;
+}
+label{
+  font-weight: bold;
+  font-size: 20px;
+}
+option, select {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
